# python-fp-study

./: README.md  pyproject.toml
python_fp_study/ch1/1-functions/: backend.py  main.py  test_class.py
python_fp_study/ch1/1. functions/: main.py
python_fp_study/ch1/2-functional-programming/1-declarative/: main.py
python_fp_study/ch1/2-functional-programming/2-pure-function/: main.py
python_fp_study/ch1/2-functional-programming/3-referential-transparency/: main.py
python_fp_study/ch1/2-functional-programming/4-immutable/: main.py
python_fp_study/ch1/2. functional-programming/1. declarative/: main.py
python_fp_study/ch2/1-clojure/: main.py
python_fp_study/ch2/2-function-and-method-chaining/: main.py
python_fp_study/ch2/3-currying-and-partial/: main.py
python_fp_study/ch2/4-compose/: main.py
python_fp_study/ch2/5-monad/: main.py
python_fp_study/ch3/1-declarative/: main.py
python_fp_study/functions/: filter.py  map.py  reduce.py
tests/: test_python_fp_study.py
