[tool.poetry]
name = "python-fp-study"
version = "0.1.0"
description = ""
authors = ["Wycliffe-Kim <f16o@hanyang.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ch1-1 = "python_fp_study.ch1.1-functions.main:main"
ch1-2-1 = "python_fp_study.ch1.2-functional-programming.1-declarative.main:main"