[tool.poetry]
name = "python-fp-study"
version = "0.1.0"
description = ""
authors = ["Wycliffe-Kim <f16o@hanyang.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ch1-1 = "python_fp_study.ch1.1-functions.main:main"
ch1-2-1 = "python_fp_study.ch1.2-functional-programming.1-declarative.main:main"
ch1-2-2 = "python_fp_study.ch1.2-functional-programming.2-pure-function.main:main"
ch1-2-3 = "python_fp_study.ch1.2-functional-programming.3-referential-transparency.main:main"
ch1-2-4 = "python_fp_study.ch1.2-functional-programming.4-immutable.main:main"
ch2-1 = "python_fp_study.ch2.1-clojure.main:main"
ch2-2 = "python_fp_study.ch2.2-function-and-method-chaining.main:main"
ch2-3 = "python_fp_study.ch2.3-currying-and-partial.main:main"
ch2-4 = "python_fp_study.ch2.4-compose.main:main"
ch2-5 = "python_fp_study.ch2.5-monad.main:main"
ch3-1 = "python_fp_study.ch3.1-declarative.main:main"
ch3-2 = "python_fp_study.ch3.2-pure-function.main:main"
ch3-3 = "python_fp_study.ch3.3-referential-transparency.main:main"
ch3-4 = "python_fp_study.ch3.4-immutable.main:main"